--- a/index.html
+++ b/index.html
@@ -125,10 +125,12 @@
             <!-- Selector de formato -->
             <label><i class="fas fa-file-pdf"></i> Formato de CV:</label>
             <select id="FormatoCV">
-                <option value="creativo" selected>Creativo</option>
-                <option value="moderno">Moderno</option>
-                <option value="clasico">Clásico</option>
-            </select>
+            <option value="creativo" selected>Creativo</option>
+             <option value="moderno">Moderno</option>
+            <option value="clasico">Clásico</option>
+            <option value="profesional">Profesional</option>
+            <option value="minimalista">Minimalista</option>
+        </select>
 
             <!-- Botones de acción -->
             <div class="button-group">
