--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="color-option" style="background: #1abc9c;" data-color="#1abc9c"></div>
                 <div class="color-option" style="background: #34495e;" data-color="#34495e"></div>
                 <div class="color-option" style="background: #e84393;" data-color="#e84393"></div>
-                <div class="color-option" style="background: #0984e3;" data-color="#0984e3"></div>
+                <div class="color-option" style="background: #1d1a9b;" data-color="#1d1a9b"></div>
                 <div class="color-option" style="background: #6c5ce7;" data-color="#6c5ce7"></div>
             </div>
             
