--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             
             <label>Color principal:</label>
             <div class="color-options">
-                <div class="color-option selected" style="background: #3498db;" data-color="#3498db"></div>
+                <div class="color-option selected" style="background: #006eff;" data-color="#3498db"></div>
                 <div class="color-option" style="background: #e74c3c;" data-color="#e74c3c"></div>
                 <div class="color-option" style="background: #2ecc71;" data-color="#2ecc71"></div>
                 <div class="color-option" style="background: #9b59b6;" data-color="#9b59b6"></div>
