--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -70,7 +71,7 @@
             <!-- Sección de datos personales -->
             <div class="section-title"><i class="fas fa-user"></i> Datos Personales</div>
 
-            <!-- Nuevo campo para foto -->
+            <!-- Campo para foto -->
             <label><i class="fas fa-camera"></i> Foto de perfil:</label>
             <div class="photo-upload-container">
                 <input type="file" id="fotoPerfil" accept="image/*" style="display: none;">
